--- a/usr/command/Makefile
+++ b/usr/command/Makefile
@@ -23,3 +23,4 @@ obj-$(CONFIG_KCMD_UPTIME)   += uptime.o
 obj-$(CONFIG_KCMD_WATCH)    += watch.o
 obj-$(CONFIG_KCMD_WC)    	+= wc.o
 obj-$(CONFIG_KCMD_WHILE)    += while.o
+obj-$(CONFIG_KCMD_YES)      += yes.o
