--- a/usr/command/Makefile
+++ b/usr/command/Makefile
@@ -10,6 +10,7 @@ obj-$(CONFIG_KCMD_FALSE)    += false.o
 obj-$(CONFIG_KCMD_FUNC)     += func.o
 obj-$(CONFIG_KCMD_GOTO)     += goto.o
 obj-$(CONFIG_KCMD_GREP)     += grep.o
+obj-$(CONFIG_KCMD_HEAD)     += head.o
 obj-$(CONFIG_KCMD_LOOP)     += loop.o
 obj-$(CONFIG_KCMD_LSPCI)    += lspci.o
 obj-$(CONFIG_KCMD_MATH)     += math.o
@@ -17,10 +18,11 @@ obj-$(CONFIG_KCMD_MEM)      += mem.o
 obj-$(CONFIG_KCMD_PANIC)    += panic.o
 obj-$(CONFIG_KCMD_REBOOT)   += reboot.o
 obj-$(CONFIG_KCMD_SLEEP)    += sleep.o
+obj-$(CONFIG_KCMD_TAIL)     += tail.o
 obj-$(CONFIG_KCMD_TIME)     += time.o
 obj-$(CONFIG_KCMD_TRUE)     += true.o
 obj-$(CONFIG_KCMD_UPTIME)   += uptime.o
 obj-$(CONFIG_KCMD_WATCH)    += watch.o
-obj-$(CONFIG_KCMD_WC)    	+= wc.o
+obj-$(CONFIG_KCMD_WC)       += wc.o
 obj-$(CONFIG_KCMD_WHILE)    += while.o
 obj-$(CONFIG_KCMD_YES)      += yes.o
