Function: Added version command for kshell.

--- a/usr/command/Makefile
+++ b/usr/command/Makefile
@@ -22,6 +22,7 @@ obj-$(CONFIG_KCMD_TAIL)     += tail.o
 obj-$(CONFIG_KCMD_TIME)     += time.o
 obj-$(CONFIG_KCMD_TRUE)     += true.o
 obj-$(CONFIG_KCMD_UPTIME)   += uptime.o
+obj-$(CONFIG_KCMD_VERSION)  += version.o
 obj-$(CONFIG_KCMD_WATCH)    += watch.o
 obj-$(CONFIG_KCMD_WC)       += wc.o
 obj-$(CONFIG_KCMD_WHILE)    += while.o
