--- a/usr/command/Kconfig
+++ b/usr/command/Kconfig
@@ -90,6 +90,10 @@ config KCMD_UPTIME
     bool "Uptime Command Support"
     default y
 
+config KCMD_VERSION
+    bool "Verison Command Support"
+    default y
+
 config KCMD_WATCH
     bool "Watch Command Support"
     default y
