--- a/arch/x86/lib/Makefile
+++ b/arch/x86/lib/Makefile
@@ -1,6 +1,7 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += delay.o iomem.o iodelay.o
 obj-$(CONFIG_ARCH_X86_32) += memcpy32.o string32.o
-obj-$(CONFIG_ARCH_X86_64) += memcpy64.o
 obj-$(CONFIG_ARCH_X86_32) += setjmp32.o kcontext32.o
+obj-$(CONFIG_ARCH_X86_32) += dynamic-call32.o
+obj-$(CONFIG_ARCH_X86_64) += memcpy64.o
 obj-$(CONFIG_ARCH_X86_64) += setjmp64.o kcontext64.o
