--- a/lib/crypto/Makefile
+++ b/lib/crypto/Makefile
@@ -1,2 +1,5 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
-obj-y += crc.o chacha.o sha1.o
+obj-y += chacha.o sha1.o
+obj-y += crc8.o crc16.o crc32.o
+obj-y += crc-ccitt.o crc-ccittf.o
+obj-y += crc-itut.o crc-t10dif.o
