--- a/lib/Makefile
+++ b/lib/Makefile
@@ -6,7 +6,7 @@ obj-y += bitops.o bitmap.o
 obj-y += bsearch.o bytefill.o
 obj-y += ncache.o kfifo.o
 obj-y += heap.o rbtree.o segtree.o
-obj-y += sort.o klist.o ilist.o
+obj-y += list-sort.o klist.o ilist.o
 obj-y += llist.o idr.o lrange.o
 obj-y += param.o kasprintf.o
 obj-y += time.o librtc.o prandom.o
