--- a/usr/selftest/filter/Makefile
+++ b/usr/selftest/filter/Makefile
@@ -1,3 +1,4 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-$(CONFIG_SELFTEST_FILTER_EWMA) += ewma.o
 obj-$(CONFIG_SELFTEST_FILTER_MEAN) += mean.o
+obj-$(CONFIG_SELFTEST_FILTER_MEDIAN) += median.o
