Function: Added base64 crypto library..

--- a/lib/crypto/Makefile
+++ b/lib/crypto/Makefile
@@ -1,4 +1,5 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
+obj-y += base64.o
 obj-y += chacha.o sha1.o sha256.o
 obj-y += crc8.o crc16.o crc32.o
 obj-y += crc-ccitt.o crc-ccittf.o
