--- a/boot/preload/Makefile
+++ b/boot/preload/Makefile
@@ -1,6 +1,7 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 include $(src)/platform.mk
 export KASAN_SANITIZE = n
+export UBSAN_SANITIZE = n
 
 obj-$(CONFIG_ARCH_X86)     += bios/
 obj-$(CONFIG_CHIP_ESP32)   += esp32/
