Function: Added kernel support for ubsan.

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,4 +1,5 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
+UBSAN_SANITIZE_ubsan.o := n
 obj-y += device/ lock/ irq/ sched/
 obj-y += printk/ binfmt/ time/
 obj-y += namespace/ task/
@@ -7,4 +8,5 @@ obj-y += notifier.o pevent.o
 obj-y += crash.o syscall.o
 obj-y += random.o
 obj-y += resource.o power.o
+obj-$(CONFIG_UBSAN) += ubsan.o
 obj-$(CONFIG_GENERIC_MPIO) += mpio.o
