Function: Added dynamic call selftest.

--- a/usr/selftest/lib/Kconfig
+++ b/usr/selftest/lib/Kconfig
@@ -8,6 +8,10 @@ config SELFTEST_LIB_BITOPS
     bool "Bitops Test"
     default y
 
+config SELFTEST_LIB_DCALL
+    bool "Dynamic Call Test"
+    default y
+
 config SELFTEST_LIB_GLOB
     bool "Glob Parser Test"
     default y
