Function: Added syscall selftest.

--- a/usr/selftest/kernel/Kconfig
+++ b/usr/selftest/kernel/Kconfig
@@ -20,6 +20,10 @@ config SELFTEST_KERNEL_SOFTIRQ
     bool "Softirq Test"
     default y
 
+config SELFTEST_KERNEL_SYSCALL
+    bool "Syscall Test"
+    default y
+
 config SELFTEST_KERNEL_TIMER
     bool "Timer Test"
     default y
