--- a/usr/selftest/kernel/Makefile
+++ b/usr/selftest/kernel/Makefile
@@ -3,4 +3,5 @@ obj-$(CONFIG_SELFTEST_KERNEL_KCORO)     += kcoro.o
 obj-$(CONFIG_SELFTEST_KERNEL_PRANDOM)   += prandom.o
 obj-$(CONFIG_SELFTEST_KERNEL_RANDOM)    += random.o
 obj-$(CONFIG_SELFTEST_KERNEL_SOFTIRQ)   += softirq.o
+obj-$(CONFIG_SELFTEST_KERNEL_SYSCALL)   += syscall.o
 obj-$(CONFIG_SELFTEST_KERNEL_TIMER)     += timer.o
