Function: Added sort library for array sorting.
[lib/sort] Add for the first time.
    -- At present, we only design the bubbling
        algorithm for array sorting.

Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -4,7 +4,7 @@ obj-y += crypto/ filter/
 obj-y += errname.o bitrev.o
 obj-y += bitops.o bitmap.o
 obj-y += bsearch.o bytefill.o
-obj-y += ncache.o kfifo.o
+obj-y += ncache.o kfifo.o sort.o
 obj-y += heap.o rbtree.o segtree.o
 obj-y += list-sort.o klist.o ilist.o
 obj-y += llist.o idr.o lrange.o
