Function: Added array sort unit test.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/usr/selftest/lib/Makefile
+++ b/usr/selftest/lib/Makefile
@@ -15,5 +15,6 @@ obj-$(CONFIG_SELFTEST_LIB_NCACHE)   += ncache.o
 obj-$(CONFIG_SELFTEST_LIB_RBTREE)   += rbtree.o
 obj-$(CONFIG_SELFTEST_LIB_SEGTREE)  += segtree.o
 obj-$(CONFIG_SELFTEST_LIB_SLIST)    += slist.o
+obj-$(CONFIG_SELFTEST_LIB_SORT)     += sort.o
 obj-$(CONFIG_SELFTEST_LIB_UUID)     += uuid.o
 obj-$(CONFIG_SELFTEST_LIB_XML)      += xml.o
