--- a/usr/selftest/lib/Kconfig
+++ b/usr/selftest/lib/Kconfig
@@ -69,6 +69,10 @@ config SELFTEST_LIB_SLIST
     bool "Single List Test"
     default y
 
+config SELFTEST_LIB_SORT
+    bool "Sort Unit Test"
+    default y
+
 config SELFTEST_LIB_UUID
     bool "UUID Unit Test"
     default y
