Maintain: Move sleep into the sched framework.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/kernel/task/Makefile
+++ b/kernel/task/Makefile
@@ -1,3 +1,3 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
-obj-y += pid.o clone.o exec.o
-obj-y += exit.o sleep.o
+obj-y += pid.o clone.o
+obj-y += exec.o exit.o
