--- a/kernel/sched/Makefile
+++ b/kernel/sched/Makefile
@@ -1,5 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0
 obj-y += sched.o core.o prio.o
 obj-y += preempt.o idle.o
+obj-y += sleep.o
 obj-$(CONFIG_SCHED_RR) += rr.o
 obj-$(CONFIG_SCHED_FIFO) += fifo.o
