--- a/drivers/led/trigger/Makefile
+++ b/drivers/led/trigger/Makefile
@@ -1,3 +1,4 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
+obj-$(CONFIG_LED_TRIGGER_HEARTBEAT) += heartbeat.o
 obj-$(CONFIG_LED_TRIGGER_PERIODIC) += periodic.o
 obj-$(CONFIG_LED_TRIGGER_POWER) += power.o
