Function: Added argv-split library.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,24 +1,50 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
-obj-y += libc/ font/ framedraw/
-obj-y += crypto/ filter/
-obj-y += errname.o bitrev.o
-obj-y += bitops.o bitmap.o
-obj-y += bsearch.o bytefill.o
-obj-y += ncache.o kfifo.o sort.o
-obj-y += heap.o rbtree.o segtree.o
-obj-y += list-sort.o klist.o ilist.o
-obj-y += llist.o idr.o lrange.o
-obj-y += param.o kasprintf.o
-obj-y += time.o librtc.o prandom.o
-obj-y += size.o memdump.o ratelimit.o
-obj-y += libcpio.o uuid.o json.o xml.o
-obj-y += glob.o getopt.o minpool.o
-obj-y += lru-cache.o lru-cache-helper.o
-obj-$(CONFIG_DEBUG_LIST) += list-debug.o
-obj-$(CONFIG_DEBUG_HLIST) += hlist-debug.o
-obj-$(CONFIG_DEBUG_SLIST) += slist-debug.o
-obj-$(CONFIG_DEBUG_RBTREE) += rbtree-debug.o
-obj-$(CONFIG_DEBUG_REFCOUNT) += refcount.o
-obj-$(CONFIG_ARCH_32BIT) += divdi3.o
 obj-$(CONFIG_ACPI) += acpica/
+obj-y += crypto/
 obj-$(CONFIG_DT) += fdt/
+obj-y += filter/
+obj-y += font/
+obj-y += framedraw/
+obj-y += libc/
+obj-y += argv-split.o
+obj-y += bitmap.o
+obj-y += bitops.o
+obj-y += bitrev.o
+obj-y += bsearch.o
+obj-y += bytefill.o
+obj-$(CONFIG_ARCH_32BIT) += divdi3.o
+obj-y += errname.o
+obj-y += getopt.o
+obj-y += glob.o
+obj-y += heap.o
+obj-$(CONFIG_DEBUG_HLIST) += hlist-debug.o
+obj-y += idr.o
+obj-y += ilist.o
+obj-y += json.o
+obj-y += kasprintf.o
+obj-y += kfifo.o
+obj-y += klist.o
+obj-y += libcpio.o
+obj-y += librtc.o
+obj-$(CONFIG_DEBUG_LIST) += list-debug.o
+obj-y += list-sort.o
+obj-y += llist.o
+obj-y += lrange.o
+obj-y += lru-cache-helper.o
+obj-y += lru-cache.o
+obj-y += memdump.o
+obj-y += minpool.o
+obj-y += ncache.o
+obj-y += param.o
+obj-y += prandom.o
+obj-y += ratelimit.o
+obj-$(CONFIG_DEBUG_RBTREE) += rbtree-debug.o
+obj-y += rbtree.o
+obj-$(CONFIG_DEBUG_REFCOUNT) += refcount.o
+obj-y += segtree.o
+obj-y += size.o
+obj-$(CONFIG_DEBUG_SLIST) += slist-debug.o
+obj-y += sort.o
+obj-y += time.o
+obj-y += uuid.o
+obj-y += xml.o
