--- a/kernel/irq/Makefile
+++ b/kernel/irq/Makefile
@@ -1,3 +1,4 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += irq.o handle.o softirq.o
 obj-y += hardirq.o bottom-half.o
+obj-y += preempt.o
