Function: Added selftest for range library.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/usr/selftest/lib/Kconfig
+++ b/usr/selftest/lib/Kconfig
@@ -57,6 +57,10 @@ config SELFTEST_LIB_NCACHE
     bool "Ncache Test"
     default y
 
+config SELFTEST_LIB_RANGE
+    bool "Range Test"
+    default y
+
 config SELFTEST_LIB_RBTREE
     bool "Rbtree Test"
     default y
