--- a/usr/selftest/lib/Makefile
+++ b/usr/selftest/lib/Makefile
@@ -12,6 +12,7 @@ obj-$(CONFIG_SELFTEST_LIB_KFIFO)    += kfifo.o
 obj-$(CONFIG_SELFTEST_LIB_LIST)     += list.o
 obj-$(CONFIG_SELFTEST_LIB_MEMDUMP)  += memdump.o
 obj-$(CONFIG_SELFTEST_LIB_NCACHE)   += ncache.o
+obj-$(CONFIG_SELFTEST_LIB_RANGE)    += range.o
 obj-$(CONFIG_SELFTEST_LIB_RBTREE)   += rbtree.o
 obj-$(CONFIG_SELFTEST_LIB_SEGTREE)  += segtree.o
 obj-$(CONFIG_SELFTEST_LIB_SLIST)    += slist.o
