--- a/usr/selftest/lib/Kconfig
+++ b/usr/selftest/lib/Kconfig
@@ -53,6 +53,10 @@ config SELFTEST_LIB_MEMDUMP
     bool "Hexdump Test"
     default y
 
+config SELFTEST_LIB_MINPOOL
+    bool "Minpool Test"
+    default y
+
 config SELFTEST_LIB_NCACHE
     bool "Ncache Test"
     default y
