Function: Added the base btree library without iter.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -13,6 +13,8 @@ obj-y += bitmap.o
 obj-y += bitops.o
 obj-y += bitrev.o
 obj-y += bsearch.o
+obj-y += btree-helper.o
+obj-y += btree.o
 obj-y += bytefill.o
 obj-$(CONFIG_ARCH_32BIT) += divdi3.o
 obj-y += errname.o
