--- a/lib/font/Makefile
+++ b/lib/font/Makefile
@@ -1,10 +1,12 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += font.o
-
-obj-$(CONFIG_FONT_6X8) += font_6x8.o
-obj-$(CONFIG_FONT_6X10) += font_6x10.o
-obj-$(CONFIG_FONT_6X11) += font_6x11.o
-obj-$(CONFIG_FONT_7X14) += font_7x14.o
-obj-$(CONFIG_FONT_8X8) += font_8x8.o
-obj-$(CONFIG_FONT_8X16) += font_8x16.o
-obj-$(CONFIG_FONT_10X18) += font_10x18.o
+obj-$(CONFIG_FONT_4X6)      += font-4x6.o
+obj-$(CONFIG_FONT_6X8)      += font-6x8.o
+obj-$(CONFIG_FONT_6X10)     += font-6x10.o
+obj-$(CONFIG_FONT_6X11)     += font-6x11.o
+obj-$(CONFIG_FONT_7X14)     += font-7x14.o
+obj-$(CONFIG_FONT_8X8)      += font-8x8.o
+obj-$(CONFIG_FONT_8X16)     += font-8x16.o
+obj-$(CONFIG_FONT_10X18)    += font-10x18.o
+obj-$(CONFIG_FONT_12X22)    += font-12x22.o
+obj-$(CONFIG_FONT_12X22)    += font-16x32.o
