--- a/usr/command/Makefile
+++ b/usr/command/Makefile
@@ -9,7 +9,6 @@ obj-$(CONFIG_KCMD_DELAY)    += delay.o
 obj-$(CONFIG_KCMD_ECHO)     += echo.o
 obj-$(CONFIG_KCMD_EXPORT)   += export.o
 obj-$(CONFIG_KCMD_FALSE)    += false.o
-obj-$(CONFIG_KCMD_FUNC)     += func.o
 obj-$(CONFIG_KCMD_GOTO)     += goto.o
 obj-$(CONFIG_KCMD_GREP)     += grep.o
 obj-$(CONFIG_KCMD_HEAD)     += head.o
@@ -28,4 +27,5 @@ obj-$(CONFIG_KCMD_VERSION)  += version.o
 obj-$(CONFIG_KCMD_WATCH)    += watch.o
 obj-$(CONFIG_KCMD_WC)       += wc.o
 obj-$(CONFIG_KCMD_WHILE)    += while.o
+obj-$(CONFIG_KCMD_XMODEM)   += xmodem.o
 obj-$(CONFIG_KCMD_YES)      += yes.o
