--- a/usr/kshell/Makefile
+++ b/usr/kshell/Makefile
@@ -1,3 +1,3 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += core.o kshell.o env.o console.o
-obj-y += parser.o readline.o
+obj-y += parser.o readline.o func.o
