Function: Add tsc command support for kshell on x86.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/usr/command/arch/Kconfig
+++ b/usr/command/arch/Kconfig
@@ -8,3 +8,8 @@ config KCMD_ARCH_X86_MSR
     bool "X86 MSR Command Support"
     depends on ARCH_X86
     default y
+
+config KCMD_ARCH_X86_TSC
+    bool "X86 TSC Command Support"
+    depends on ARCH_X86
+    default y
