Maintain: Added dynamic and static optimization for bcd conversion.
Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,5 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-$(CONFIG_ACPI) += acpica/
+obj-y += bcd.o
 obj-y += crypto/
 obj-$(CONFIG_DT) += fdt/
 obj-y += filter/
