Maintain: Separate the libgcc framework from the library.
Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -7,6 +7,7 @@ obj-y += filter/
 obj-y += font/
 obj-y += framedraw/
 obj-y += libc/
+obj-y += libgcc/
 obj-y += math/
 obj-y += argv-merge.o
 obj-y += argv-split.o
@@ -17,7 +18,6 @@ obj-y += bsearch.o
 obj-y += btree-helper.o
 obj-y += btree.o
 obj-y += bytefill.o
-obj-$(CONFIG_ARCH_32BIT) += divdi3.o
 obj-y += errname.o
 obj-y += getopt-long.o
 obj-y += getopt.o
