Function: Added nearly complete libgcc builtin function support.
Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/lib/libgcc/Makefile
+++ b/lib/libgcc/Makefile
@@ -1,3 +1,4 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 ccflags-y := -Ofast
-obj-$(CONFIG_ARCH_32BIT) += divdi3.o
+obj-$(CONFIG_LIBGCC_BASE) += libgcc.o
+obj-$(CONFIG_LIBGCC_DIVDI3) += divdi3.o
