--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -25,6 +25,7 @@ config ARCH_X86_32
     select ARCH_HAS_PMIO
     select ARCH_HAS_KASAN
     select GENERIC_MPIO
+    select LIBGCC_DIVDI3
 
 config ARCH_X86_64
     bool "X86_64"
