Function: Add libgcc support for DItype division.
Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/lib/libgcc/Makefile
+++ b/lib/libgcc/Makefile
@@ -1,4 +1,5 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 ccflags-y := -Ofast
-obj-$(CONFIG_LIBGCC_BASE) += libgcc.o
+obj-$(CONFIG_LIBGCC_BASE) += libgcc.obj
 obj-$(CONFIG_LIBGCC_DIVDI3) += divdi3.o
+obj-$(CONFIG_LIBGCC_DIVSI3) += divsi3.o
