Function: Add libgcc support for HItype division.
Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/lib/libgcc/Makefile
+++ b/lib/libgcc/Makefile
@@ -3,3 +3,4 @@ ccflags-y := -Ofast
 obj-$(CONFIG_LIBGCC_BASE) += libgcc.obj
 obj-$(CONFIG_LIBGCC_DIVDI3) += divdi3.o
 obj-$(CONFIG_LIBGCC_DIVSI3) += divsi3.o
+obj-$(CONFIG_LIBGCC_DIVHI3) += divhi3.o
