Function: Added bios preload and x86 kboot support for serial console.
Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/boot/kboot/Kconfig
+++ b/boot/kboot/Kconfig
@@ -7,3 +7,5 @@ config LOAD_ADDR
     default 0x00
     help
         The physical address where the boot image is loaded
+
+source "boot/kboot/x86/Kconfig"
