--- a/boot/preload/bios/Makefile
+++ b/boot/preload/bios/Makefile
@@ -1,5 +1,5 @@
+# SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += boot/startup.o
 obj-y += driver/
 obj-y += main.o a20.o
-
 extra-y += boot.lds
