--- a/boot/preload/bios/driver/Makefile
+++ b/boot/preload/bios/driver/Makefile
@@ -1,2 +1,4 @@
+# SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += biosdisk.o
-obj-y += video.o
+obj-$(CONFIG_PRELOAD_CON_VGA) += video.o
+obj-$(CONFIG_PRELOAD_CON_SER) += serial.o
