Function: Added gunit for unified processing of display units.
Signed-off-by: John-sanpe <sanpeqf@gmail.com>

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -22,6 +22,7 @@ obj-y += errname.o
 obj-y += getopt-long.o
 obj-y += getopt.o
 obj-y += glob.o
+obj-y += gunit.o
 obj-y += heap.o
 obj-$(CONFIG_DEBUG_HLIST) += hlist-debug.o
 obj-y += idr.o
@@ -50,7 +51,6 @@ obj-$(CONFIG_DEBUG_RBTREE) += rbtree-debug.o
 obj-y += rbtree.o
 obj-$(CONFIG_DEBUG_REFCOUNT) += refcount.o
 obj-y += segtree.o
-obj-y += size.o
 obj-y += skiplist.o
 obj-$(CONFIG_DEBUG_SLIST) += slist-debug.o
 obj-y += sort.o
