--- a/kernel/time/Makefile
+++ b/kernel/time/Makefile
@@ -1,3 +1,3 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
-obj-y += systicks.o timekeeping.o
+obj-y += systicks.o timekeeping.o kclock.o
 obj-y += timer.o delay.o
