Function: Added the wordops framework.
[asm-generic:wordops] Initialization framework.
    -- Wordops is used to process data in batches in words.
        For example, it can hash four bytes or eight bytes
        at a time, which can greatly improve performance.

Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/include/asm-generic/Makefile
+++ b/include/asm-generic/Makefile
@@ -14,3 +14,4 @@ mandatory-y += rwonce.h
 mandatory-y += unaligned.h
 mandatory-y += spinlock-types.h
 mandatory-y += spinlock.h
+mandatory-y += wordops.h
