Function: Added string hash framework.
[lib:stringhash] Initialization framework.
    -- Stringhash is a general string hash processing algorithm
        framework. It uses wordops to speed up the operation.

Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -54,6 +54,7 @@ obj-y += segtree.o
 obj-y += skiplist.o
 obj-$(CONFIG_DEBUG_SLIST) += slist-debug.o
 obj-y += sort.o
+obj-y += stringhash.o
 obj-y += time.o
 obj-y += uuid.o
 obj-y += xml.o
