Maintain: Uniformly corrected the unreasonable aspects of kconfig.
    Added the kconfig configuration option of DIVHI3 in libgcc.

    Corrected the wrong default option of "Preload Console Choice"
    in bios preload.

Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/boot/preload/bios/Kconfig
+++ b/boot/preload/bios/Kconfig
@@ -8,7 +8,7 @@ config PRELOAD_EXTENDED
 
 choice
     prompt "Preload Console Choice"
-    default PERLOAD_CON_SER
+    default PRELOAD_CON_SER
 
 config PRELOAD_CON_VGA
     bool "VGA"
