Function: Added lowest common multiple algorithm to math library.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/lib/math/Makefile
+++ b/lib/math/Makefile
@@ -1,6 +1,7 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 obj-y += atant.o
 obj-y += gcd.o
+obj-y += lcm.o
 obj-y += pow.o
 obj-y += sin.o
 obj-y += sqrt.o
