Maintain: Independent crash framework and optimized search efficiency.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -5,8 +5,8 @@ obj-y += printk/ binfmt/ time/
 obj-y += namespace/ task/
 obj-y += kthread.o kcoro.o entry.o
 obj-y += notifier.o pevent.o
-obj-y += crash.o syscall.o
-obj-y += random.o
+obj-y += crash.o panic.o
+obj-y += syscall.o random.o
 obj-y += resource.o power.o
 obj-$(CONFIG_UBSAN) += ubsan.o
 obj-$(CONFIG_KGCOV) += kgcov/
