Function: Addrd intel hex resolution library.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -27,6 +27,7 @@ obj-y += gunit.o
 obj-y += heap.o
 obj-$(CONFIG_DEBUG_HLIST) += hlist-debug.o
 obj-y += idr.o
+obj-y += ihex-parser.o
 obj-y += ilist.o
 obj-y += json.o
 obj-y += kasprintf.o
