--- a/usr/command/Makefile
+++ b/usr/command/Makefile
@@ -2,11 +2,13 @@
 obj-y += arch/
 obj-$(CONFIG_KCMD_ASCII85)  += ascii85.o
 obj-$(CONFIG_KCMD_BASE64)   += base64.o
+obj-$(CONFIG_KCMD_BREAK)    += break.o
 obj-$(CONFIG_KCMD_CLEAR)    += clear.o
 obj-$(CONFIG_KCMD_COND)     += cond.o
 obj-$(CONFIG_KCMD_CONTINUE)	+= continue.o
 obj-$(CONFIG_KCMD_DELAY)    += delay.o
 obj-$(CONFIG_KCMD_ECHO)     += echo.o
+obj-$(CONFIG_KCMD_EXIT)     += exit.o
 obj-$(CONFIG_KCMD_EXPORT)   += export.o
 obj-$(CONFIG_KCMD_FALSE)    += false.o
 obj-$(CONFIG_KCMD_GOTO)     += goto.o
@@ -18,11 +20,14 @@ obj-$(CONFIG_KCMD_MATH)     += math.o
 obj-$(CONFIG_KCMD_MEM)      += mem.o
 obj-$(CONFIG_KCMD_PANIC)    += panic.o
 obj-$(CONFIG_KCMD_REBOOT)   += reboot.o
+obj-$(CONFIG_KCMD_REPEAT)   += repeat.o
+obj-$(CONFIG_KCMD_RETURN)   += return.o
 obj-$(CONFIG_KCMD_SLEEP)    += sleep.o
 obj-$(CONFIG_KCMD_SWITCH)   += switch.o
 obj-$(CONFIG_KCMD_TAIL)     += tail.o
 obj-$(CONFIG_KCMD_TIME)     += time.o
 obj-$(CONFIG_KCMD_TRUE)     += true.o
+obj-$(CONFIG_KCMD_UNTIL)    += until.o
 obj-$(CONFIG_KCMD_UPTIME)   += uptime.o
 obj-$(CONFIG_KCMD_VERSION)  += version.o
 obj-$(CONFIG_KCMD_WATCH)    += watch.o
