Function: Optimize logic of the block device partition and add mac.
[blk-part] Optimize concurrency efficiency.
    -- We rarely insert partition tables dynamically, but we often use
        them, so we use read/write locks with higher read priority.
    -- We originally printed the partition information inside the partition table,
        but for higher concurrency, we uniformly printed them.

[blk-part:mac] Functional addition.
    -- Added block support for mac partition tables.

Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/drivers/block/partitions/Kconfig
+++ b/drivers/block/partitions/Kconfig
@@ -13,4 +13,8 @@ config PART_SUN
     bool "Sun Partition Table Support"
     default y
 
+config PART_MAC
+    bool "Mac Partition Table Support"
+    default y
+
 endmenu
