--- a/drivers/block/partitions/Makefile
+++ b/drivers/block/partitions/Makefile
@@ -3,3 +3,4 @@ obj-y += partition.o
 obj-$(CONFIG_PART_MSDOS) += msdos.o
 obj-$(CONFIG_PART_EFI) += efi.o
 obj-$(CONFIG_PART_SUN) += sun.o
+obj-$(CONFIG_PART_MAC) += mac.o
