Function: Added select syntax and optimized kshell logic.
[select] Added new command.
    -- This syntax is used as menu selection logic. It will create a
        menu for you to select according to the parameters.

[kshell] Syntax maintenance.
    -- Delete the fallthrough support of switch, because it
        will mess up many things.

Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/usr/command/Kconfig
+++ b/usr/command/Kconfig
@@ -90,6 +90,10 @@ config KCMD_RETURN
     bool "Return Command Support"
     default y
 
+config KCMD_SELECT
+    bool "Select Command Support"
+    default y
+
 config KCMD_SLEEP
     bool "Sleep Command Support"
     default y
