Function: Added support for ib700 watchdog.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/drivers/watchdog/Kconfig
+++ b/drivers/watchdog/Kconfig
@@ -10,6 +10,9 @@ config WATCHDOG_GX6605S
     bool "GX6605S Watchdog Support"
     select POWER
 
+config WATCHDOG_IB700
+    bool "Ibase IB700 Watchdog Support"
+
 config WATCHDOG_TCO
     bool "Intel TCO Watchdog Support"
     depends on ARCH_X86 && MFD_ICH
