--- a/usr/command/Makefile
+++ b/usr/command/Makefile
@@ -18,6 +18,7 @@ obj-$(CONFIG_KCMD_LOOP)     += loop.o
 obj-$(CONFIG_KCMD_LSPCI)    += lspci.o
 obj-$(CONFIG_KCMD_MATH)     += math.o
 obj-$(CONFIG_KCMD_MEM)      += mem.o
+obj-$(CONFIG_KCMD_NATIVE)   += native.o
 obj-$(CONFIG_KCMD_PANIC)    += panic.o
 obj-$(CONFIG_KCMD_REBOOT)   += reboot.o
 obj-$(CONFIG_KCMD_REPEAT)   += repeat.o
