Maintain: Added printk level selective compilation support.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/kernel/printk/Kconfig
+++ b/kernel/printk/Kconfig
@@ -1,43 +1,49 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
-menu "Printk Config"
-
-config PRINTK
+menuconfig PRINTK
     bool "Printk Support"
     default y
+if PRINTK
 
-config PRINTK_COLOR
-    bool "Show Level Color"
-    depends on PRINTK
+config DYNAMIC_DEBUG
+    bool "Kernel dynamic debug"
     default y
 
 config PRINTK_TIME
-    bool "Show Timing Information"
-    depends on PRINTK
+    bool "Show timing information"
     default y
 
-config PRINTK_LOGLEVEL
-    int "Default message log level"
+config PRINTK_COLOR
+    bool "Show level color"
+    default y
+
+config PRINTK_LOGLEVEL_DEFAULT
+    int "Default console loglevel"
     depends on PRINTK
-    range 1 7
+    range 0 PRINTK_LOGLEVEL_MAX
     default 4
 
-config DYNAMIC_DEBUG
-    bool "Kernel Dynamic Debug"
-    depends on PRINTK
-    default y
+config PRINTK_LOGLEVEL_QUIET
+    int "Quiet console loglevel"
+    range 0 PRINTK_LOGLEVEL_MAX
+    default 4
+
+config PRINTK_LOGLEVEL_MAX
+    int "Maximum console loglevel"
+    range 0 7 if !DYNAMIC_DEBUG
+    range 7 7 if DYNAMIC_DEBUG
+    default 7
 
 config CONSOLE_PREFERREDS
     int "Maximum console parameters"
-    depends on PRINTK
     default 16
 
 config EARLYCON
-    bool "Early Console Support"
+    bool "Early console support"
     default y
 
 config BOOTCON
-    bool "Bootloader Console Support"
+    bool "Bootloader console support"
     depends on EARLYCON
     default y
 
-endmenu # Printk Config
+endif # Printk Config
