Function: Added kshell seq command for output sequence.
Signed-off-by: John Sanpe <sanpeqf@gmail.com>

--- a/usr/command/Kconfig
+++ b/usr/command/Kconfig
@@ -102,6 +102,10 @@ config KCMD_SELECT
     bool "Select Command Support"
     default y
 
+config KCMD_SEQ
+    bool "Seq Command Support"
+    default y
+
 config KCMD_SLEEP
     bool "Sleep Command Support"
     default y
